# unofficial-neuro-kar-manager

./: LICENSE  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-dev.yml  build-release.yml
src/: global.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/api/: gdrive.rs  rclone.rs
src-tauri/src/api/gdrive/: download.rs  list.rs  remotes.rs
src-tauri/src/api/rclone/: server.rs  stats.rs
src/components/: AppProviders.tsx  DownloadsButton.tsx  FileBrowserModal.tsx  Layout.tsx  TransferStatus.tsx
src/components/download/: AdvancedOptionsModal.tsx  DestinationSection.tsx  RemoteConfigSection.tsx
src/components/ui/: button.tsx  hybrid-tooltip.tsx  label.tsx  popover.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tooltip.tsx
src/hooks/: useDownloadForm.ts  useDownloadProcess.ts  useTransferStats.ts
src/pages/: Download.tsx  InitPage.tsx
src/types/: config.ts  download.ts
