[package]
name = "unofficial-neuro-kar-manager"
version = "0.0.2"
description = "A Tauri App"
authors = ["Inforno"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unofficial_neuro_kar_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "=0.13.1", features = ["blocking", "rustls-native-certs"] }
zip = "=7.2.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "=0.13.1", features = ["json", "stream"] }
tokio = { version = "=1.49.0", features = ["full"] }
zip = "=7.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
rclone-sdk = "=1.72.1"
chrono = "=0.4.43"
regex = "=1.12.2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
dirs = "=6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
